--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="google-site-verification" content="nSFyJSn3Fad_5ldAkiTHzj6yqqXKSaVDtzbI1HXmiUk" />
     <title>CV. Jala Mas Persada - Spesialis AC Semarang</title>
     <meta name="description" content="Solusi Pendingin Udara Profesional Jawa Tengah. Sales, Projects, Maintenance sejak 1992.">
     
@@ -609,4 +610,5 @@
         }
     </script>
 </body>
+
 </html>
